--- a/bumpbuddy/src/i18n/languages/fr.json
+++ b/bumpbuddy/src/i18n/languages/fr.json
@@ -13,7 +13,7 @@
     },
     "validation": {
       "required": "Ce champ est obligatoire",
-      "email": "Veuillez entrer un e-mail valide",
+      "email": "Veuillez entrer un email valide",
       "minLength": "Ce champ doit contenir au moins {{count}} caractères",
       "maxLength": "Ce champ doit contenir moins de {{count}} caractères",
       "passwordMatch": "Les mots de passe ne correspondent pas",
@@ -21,7 +21,7 @@
     },
     "placeholders": {
       "search": "Rechercher...",
-      "email": "Entrez votre e-mail",
+      "email": "Entrez votre email",
       "password": "Entrez votre mot de passe",
       "date": "Sélectionnez une date"
     },
@@ -39,47 +39,48 @@
       "success": "Succès"
     },
     "yes": "Oui",
-    "no": "Non"
+    "no": "Non",
+    "goBack": "Retourner"
   },
   "auth": {
     "login": {
       "title": "Connexion",
-      "emailLabel": "E-mail",
+      "emailLabel": "Email",
       "passwordLabel": "Mot de passe",
       "forgotPassword": "Mot de passe oublié ?",
-      "submitButton": "Se Connecter",
+      "submitButton": "Se connecter",
       "noAccount": "Vous n'avez pas de compte ?",
       "signupLink": "S'inscrire",
       "pleaseLoginFirst": "Veuillez vous connecter pour voir votre profil."
     },
     "signup": {
       "title": "Inscription",
-      "emailLabel": "E-mail",
+      "emailLabel": "Email",
       "passwordLabel": "Mot de passe",
       "confirmPasswordLabel": "Confirmer le mot de passe",
-      "dueDateLabel": "Date d'accouchement prévue",
+      "dueDateLabel": "Date prévue d'accouchement",
       "submitButton": "Créer un compte",
       "hasAccount": "Vous avez déjà un compte ?",
       "loginLink": "Se connecter"
     },
     "forgotPassword": {
       "title": "Mot de passe oublié",
-      "emailLabel": "E-mail",
+      "emailLabel": "Email",
       "submitButton": "Réinitialiser le mot de passe",
-      "instructions": "Entrez votre adresse e-mail et nous vous enverrons un lien pour réinitialiser votre mot de passe.",
+      "instructions": "Entrez votre adresse email et nous vous enverrons un lien pour réinitialiser votre mot de passe.",
       "backToLogin": "Retour à la connexion"
     }
   },
   "profile": {
     "title": "Mon Profil",
-    "personalInfo": "Informations personnelles",
-    "dueDate": "Date d'accouchement",
+    "personalInfo": "Informations Personnelles",
+    "dueDate": "Date prévue d'accouchement",
     "pregnancyWeek": "Semaine de grossesse",
     "editProfile": "Modifier le profil",
     "changePassword": "Changer le mot de passe",
     "logOut": "Déconnexion",
     "settings": "Paramètres",
-    "profileUpdated": "Profil mis à jour à",
+    "profileUpdated": "Profil mis à jour le",
     "realtimeConnected": "Connecté en temps réel",
     "realtimeConnectionFailed": "Échec de la connexion en temps réel",
     "realtimeError": "Erreur de connexion en temps réel",
@@ -89,55 +90,76 @@
   },
   "home": {
     "welcome": "Bienvenue, {{name}} !",
-    "journeyTitle": "Votre parcours de grossesse",
+    "journeyTitle": "Votre Parcours de Grossesse",
     "weekTitle": "Semaine {{week}}",
     "trimesterLabel": "{{trimester}} Trimestre",
-    "progressLabel": "{{percent}}% Complet",
-    "developmentTitle": "Développement à la semaine {{week}}",
-    "bodyChangesTitle": "Votre corps cette semaine",
-    "nutritionTipsTitle": "Conseils nutritionnels",
+    "progressLabel": "{{percent}}% Complété",
+    "developmentTitle": "Développement Semaine {{week}}",
+    "bodyChangesTitle": "Votre Corps Cette Semaine",
+    "nutritionTipsTitle": "Conseils Nutritionnels",
     "sizeLabel": "Taille",
     "lengthLabel": "Longueur",
     "weightLabel": "Poids",
-    "trackSymptomsButton": "Suivre les symptômes",
-    "foodGuideButton": "Guide de sécurité alimentaire"
+    "trackSymptomsButton": "Suivre les Symptômes",
+    "foodGuideButton": "Guide de Sécurité Alimentaire"
+  },
+  "timeline": {
+    "title": "Chronologie de Grossesse",
+    "weekLabel": "Semaine {{week}}",
+    "currentWeek": "Semaine Actuelle",
+    "firstTrimester": "Premier Trimestre",
+    "secondTrimester": "Deuxième Trimestre",
+    "thirdTrimester": "Troisième Trimestre",
+    "weekNotFound": "Informations sur la semaine non trouvées",
+    "development": "Développement Fœtal",
+    "maternalChanges": "Votre Corps Cette Semaine",
+    "tips": "Conseils pour Cette Semaine",
+    "nutritionAdvice": "Conseils Nutritionnels",
+    "commonSymptoms": "Symptômes Courants",
+    "medicalCheckups": "Examens Médicaux",
+    "sizeComparison": "Comparaison de Taille du Bébé",
+    "babyIsSize": "Votre bébé est environ de la taille d'un(e) {{size}}",
+    "viewWeekDetails": "Voir les Détails de la Semaine",
+    "nextWeek": "Semaine Suivante",
+    "previousWeek": "Semaine Précédente",
+    "loading": "Chargement des informations de la semaine..."
   },
   "foodGuide": {
-    "title": "Guide de sécurité alimentaire",
+    "title": "Guide de Sécurité Alimentaire",
     "searchPlaceholder": "Rechercher des aliments...",
     "categories": "Catégories",
     "safeToEat": "Sûr à consommer",
     "cautionNeeded": "Consommer avec précaution",
-    "avoid": "À éviter pendant la grossesse",
+    "avoid": "Éviter pendant la grossesse",
     "alternativesLabel": "Alternatives",
-    "nutritionalInfoLabel": "Informations nutritionnelles",
+    "nutritionalInfoLabel": "Information Nutritionnelle",
     "description": "Description",
     "all": "Tous",
     "safe": "Sûr",
     "caution": "Précaution"
   },
   "healthTracker": {
-    "title": "Suivi de santé",
-    "symptomsTitle": "Suivi des symptômes",
-    "kickCountTitle": "Compteur de mouvements",
-    "contractionsTitle": "Minuteur de contractions",
-    "weightTitle": "Suivi du poids",
-    "addEntryButton": "Ajouter une entrée",
+    "title": "Suivi de Santé",
+    "symptomsTitle": "Suivi des Symptômes",
+    "kickCountTitle": "Compteur de Coups",
+    "contractionsTitle": "Chronomètre de Contractions",
+    "weightTitle": "Suivi de Poids",
+    "addEntryButton": "Ajouter une Entrée",
     "dateLabel": "Date",
     "timeLabel": "Heure",
     "notesLabel": "Notes",
     "severityLabel": "Sévérité",
     "durationLabel": "Durée",
     "frequencyLabel": "Fréquence",
-    "startTrackingButton": "Commencer le suivi",
-    "stopTrackingButton": "Arrêter le suivi"
+    "startTrackingButton": "Commencer le Suivi",
+    "stopTrackingButton": "Arrêter le Suivi"
   },
   "appointments": {
     "title": "Rendez-vous",
     "upcomingTitle": "À venir",
     "pastTitle": "Passés",
-    "addButton": "Ajouter un rendez-vous",
-    "dateTimeLabel": "Date et heure",
+    "addButton": "Ajouter un Rendez-vous",
+    "dateTimeLabel": "Date et Heure",
     "locationLabel": "Lieu",
     "typeLabel": "Type",
     "titleLabel": "Titre",
@@ -145,11 +167,11 @@
     "timeLabel": "Heure",
     "descriptionLabel": "Description",
     "notesLabel": "Notes",
-    "reminderLabel": "Définir un rappel",
+    "reminderLabel": "Définir un Rappel",
     "noAppointments": "Aucun rendez-vous programmé",
     "tapToAddAppointment": "Appuyez sur le bouton ci-dessus pour ajouter votre premier rendez-vous",
-    "editAppointment": "Modifier le rendez-vous",
-    "addNewAppointment": "Nouveau rendez-vous",
+    "editAppointment": "Modifier le Rendez-vous",
+    "addNewAppointment": "Nouveau Rendez-vous",
     "titleRequired": "Veuillez entrer un titre pour le rendez-vous",
     "titlePlaceholder": "Entrez le titre du rendez-vous",
     "notesPlaceholder": "Entrez des notes pour ce rendez-vous"
@@ -157,17 +179,17 @@
   "settings": {
     "title": "Paramètres",
     "languageSection": "Langue",
-    "languageLabel": "Langue de l'application",
+    "languageLabel": "Langue de l'Application",
     "unitsSection": "Unités",
-    "unitsLabel": "Unités de mesure",
+    "unitsLabel": "Unités de Mesure",
     "themeSection": "Apparence",
     "themeLabel": "Thème",
     "notificationsSection": "Notifications",
-    "notificationsLabel": "Activer les notifications",
+    "notificationsLabel": "Activer les Notifications",
     "aboutSection": "À propos",
-    "versionLabel": "Version de l'application",
-    "privacyPolicyLabel": "Politique de confidentialité",
-    "termsOfServiceLabel": "Conditions d'utilisation",
-    "feedbackLabel": "Envoyer des commentaires"
+    "versionLabel": "Version de l'Application",
+    "privacyPolicyLabel": "Politique de Confidentialité",
+    "termsOfServiceLabel": "Conditions d'Utilisation",
+    "feedbackLabel": "Envoyer des Commentaires"
   }
 }
